--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +14,44 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.nav-link{
+  color: whitesmoke !important;
+}
+
+.pack_name{
+  font-size: 20px !important;
+  font-family: 'Arvo', serif !important;
+}
+
+.pack_image{
+  height: 170px;
+  width: 200px;
+}
+
+.channel-type-selection{
+  display: flex !important;
+}
+
+.font-imported{
+  font-family: 'Roboto Mono', monospace !important;
+}
+
+.navbar-font{
+  font-family: 'Roboto Slab', serif;
+}
+
+.cart-btn{
+  font-family: 'Roboto Slab', serif !important;
+}
+
+section{
+  box-shadow: none !important;
+  border: 2px solid black !important; ;
+}
+
+.channel-pack-style{
+  margin: 70px;
+  margin-top: 0px;
+}
+
