--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&display=swap');
 
+/*Button font*/
+@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -47,11 +51,20 @@ code {
 
 section{
   box-shadow: none !important;
-  border: 2px solid black !important; ;
+  border: 2px solid black !important;
 }
 
 .channel-pack-style{
   margin: 70px;
   margin-top: 0px;
+}
+
+.btn{
+  font-family: 'Bungee', cursive !important;
+}
+.btn:hover{
+  background: navy;
+  color: whitesmoke;
+  border-radius: 20px;
 }
 
