--- a/src/style/cartPage.css
+++ b/src/style/cartPage.css
@@ -4,3 +4,27 @@
     font-family: 'Bangers', cursive !important;
     color: firebrick;
 }
+
+.cart-text{
+    font-size: 20px !important;
+}
+.fa-plus{
+    color: greenyellow;
+}
+.fa-minus{
+    color: firebrick;
+}
+
+.cart-image{
+    height: 100px;
+    width: 100px;
+    margin-left: 50px;
+}
+.flex-container{
+    display: flex;
+}
+
+.fa-trash{
+    color: red;
+
+}
